testsuite/escript/bug/bug004.err
bug004.src:2:6: error: missing ';' at '('