testsuite/escript/bug/bug004.src
program foo()
	CInt("ff";

endprogram
